syntax = "proto3";

package auth;

service Auth {
	rpc Login(Request) returns (Response) {};
	rpc ValidateAccessToken(ValidateTokenRequest) returns (ValidateTokenResponse) {};
}

message Request {
	string username = 1;
	string password = 2;
}

message Response {
	string token = 2;
}

message ValidateTokenRequest {
    string token = 1;
}

message ValidateTokenResponse {
    bool success = 1;
}
